--- a/package.json
+++ b/package.json
@@ -64,9 +64,12 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.3.2",
     "next-pwa": "^5.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
