--- a/package.json
+++ b/package.json
@@ -65,14 +65,17 @@
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "8.57.1",
     "eslint-config-next": "15.3.2",
+    "jest": "^29.7.0",
     "next-pwa": "^5.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.3.3",
     "typescript": "^5"
   },
   "trustedDependencies": [
