--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "eslint": "8.57.1",
     "eslint-config-next": "15.3.2",
     "jest": "^29.7.0",
-    "next-pwa": "^5.6.0",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.3",
